<resources>
    <string name="app_name">DevProject</string>
    <string name="show">show</string>
    <string name="movie">movie</string>
    <string name="netflix">netflix</string>
    <string name="hulu">hulu_plus</string>
    <string name="api">http://api-public.guidebox.com/v2/</string>
    <string name="api_key">406bfde01b56a945c9aef50299d41091299a976c</string>
    <string name="btnSearch">Search</string>
    <string name="txtSearchHint">Smallville</string>
    <string name="radioShow">Shows</string>
    <string name="radioMovie">Movies</string>
    <string name="txtNetflix">Netflix Results</string>
    <string name="txtHulu">HuluResults</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
