<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_setup"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.caleblarson.devproject.Setup">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:hint="@string/txtSearchHint"
            android:ems="10"
            android:id="@+id/editTxtSearch"
            android:layout_weight="1" />

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal">

            <RadioButton
                android:text="@string/radioShow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/radioShow"
                android:layout_weight="1"
                android:checked="true" />

            <RadioButton
                android:text="@string/radioMovie"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/radioMovie"
                android:layout_weight="1" />

        </RadioGroup>

        <Button
            android:text="@string/btnSearch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/btnSearch"
            android:layout_weight="1" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_weight="1" />

        <TextView
            android:text="@string/txtNetflix"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1" />
        <HorizontalScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/NetflixScrollView">

        </HorizontalScrollView>

        <TextView
            android:text="@string/txtHulu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1" />
        <HorizontalScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/HuluScrollView">

        </HorizontalScrollView>

    </LinearLayout>
</ScrollView>
